force-app/main/default/objects/ApiLog__c/ApiLog__c.object-meta.xml
<CustomObject>
    <label>Api Log</label>
    <nameField>
        <displayFormat>Log-{0000}</displayFormat>
        <label>Api Log Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Api Logs</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>