force-app/main/default/objects/ApiLog__c/fields/Endpoint__c.field-meta.xml
<CustomField>
    <fullName>Endpoint__c</fullName>
    <label>Original Object Endpoint</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Order</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>