force-app/main/default/objects/ApiLog__c/fields/From__c.field-meta.xml
<CustomField>
    <fullName>From__c</fullName>
    <description>Where is the request From</description>
    <label>From</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>SALESFORCE</fullName>
            </value>
            <value>
                <fullName>TOTVS</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>