force-app/main/default/objects/ApiLog__c/fields/Request__c.field-meta.xml
<CustomField>
    <fullName>Request__c</fullName>
    <description>requestBody</description>
    <label>Request</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>