force-app/main/default/objects/ApiLog__c/listViews/LastAdded.listView-meta.xml
<ListView>
    <fullName>LastAdded</fullName>
    <columns>NAME</columns>
    <columns>CREATED_DATE</columns>
    <columns>From__c</columns>
    <columns>Endpoint__c</columns>
    <filterScope>Mine</filterScope>
    <filters>
        <field>Endpoint__c</field>
        <operation>equals</operation>
        <value>Order</value>
    </filters>
    <label>Last Added Order Log</label>
</ListView>