force-app/main/default/objects/ApiLog__c/listViews/Received_Orders.listView-meta.xml
<ListView>
    <fullName>Received_Orders</fullName>
    <columns>NAME</columns>
    <columns>CREATED_DATE</columns>
    <columns>From__c</columns>
    <columns>Endpoint__c</columns>
    <filterScope>Mine</filterScope>
    <filters>
        <field>Endpoint__c</field>
        <operation>equals</operation>
        <value>Order</value>
    </filters>
    <filters>
        <field>From__c</field>
        <operation>equals</operation>
        <value>TOTVS</value>
    </filters>
    <label>Received Orders</label>
</ListView>